--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -4,20 +4,21 @@
             <img src="/assets/images/album_covers/01.png" class="album-cover-art">
         </div>
         <div class="album-view-details column half">
-            <h2 class="album-view-title">The Colors</h2>
-            <h3 class="album-view-artist">Pablo Picasso</h3>
-            <h5 class="album-view-release-info">1909 Spanish Records</h5>
+            <h2 class="album-view-title" ui-sref="album">>{{ album.title }}</h2>
+            <h3 class="album-view-artist" ui-sref="album">>{{ album.artist }}</h3>
+            <h5 class="album-view-release-info" ui-sref="album">>{{ album.year.label }}</h5>
         </div>
     </section>
     <table class="album-view-song-list">
-        <tr class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false">
-            <td class="song-item-number">
+        <tr class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false" ng-repeat="songs in albums.songs">
+            <td class="song-item-number" ng-repeat="songs in album track by $index">
+              {{$index + 1}}
               <span ng-show="!playing && !hovered">1</span>
               <a class="album-song-button" ng-show="!playing && hovered"><span class="ion-play"></span></a>
               <a class="album-song-button" ng-show="playing"><span class="ion-pause"></span></a>
             </td>
-            <td class="song-item-title">Blue</td>
-            <td class="song-item-duration">3:31</td>
+            <td class="song-item-title" ui-sref="album"> {{ album.songs.title }}</td>
+            <td class="song-item-duration" ui-sref"album"> {{ album.songs.duration }}</td>
         </tr>
     </table>
 </main>
